[build-system]
requires = ["flit_core>=3.7"]
build-backend = "flit_core.buildapi"

# project metadata
[project]
name = "sphinxcontrib-cheeseshop"
description = "Sphinx extension for PyPI"
readme = "README.rst"
license.text = "BSD-2-Clause"
urls.Repository = "https://github.com/sphinx-contrib/cheeseshop/"
requires-python = ">=3.7"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "Sphinx>=4.0",
]
dynamic = ["version"]

[[project.authors]]
name = "Adam Turner"

[[project.authors]]
name = "Georg Brandl"
email = "georg@python.org"

[[project.authors]]
name = "Richard Jones"

[tool.flit.module]
name = "sphinxcontrib.cheeseshop"
